<resources>
    <string name="app_name">coupangEats</string>
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_search_title">검색</string>
    <string name="main_btm_nav_favorites_title">즐겨찾기</string>
    <string name="main_btm_nav_order_title">주문내역</string>
    <string name="main_btm_nav_myeats_title">My 이츠</string>
    <string name="search_edit_hint">검색어를 입력하세요.</string>
    <string name="dialog_login_need_login">로그인이 필요합니다.</string>
    <string name="dialog_login_info">로그인 후 맛있는 음식을 빠르게 즐겨보세요.</string>
    <string name="dialog_login_social">카카오톡으로 로그인</string>
    <string name="dialog_login_sign_up">회원가입</string>
    <string name="dialog_login_sign_up_info">아직 회원이 아니신가요?</string>
    <string name="dialog_login_agree_head">로그인하여 </string>
    <string name="service_use_agree"><u>쿠팡이츠 서비스 이용약관</u></string>
    <string name="location_service_use_agree"><u>위치기반서비스 이용약관</u></string>
    <string name="pay_service_agree"><u>쿠팡페이 서비스 이용약관</u></string>
    <string name="pay_transaction_agree"><u>쿠팡페이 전자금융거래약관</u></string>
    <string name="pay_privacy_use_agree"><u>쿠팡페이 개인정보수집이용</u></string>
    <string name="pay_privacy_offer_agree"><u>쿠팡페이 개인정보제공에</u></string>
    <string name="dialog_login_agree_tail">동의합니다.</string>
    <string name="rest">, </string>
    <string name="dialog_login_basic">쿠팡 아이디로 로그인</string>
    <string name="pay"><u>쿠팡페이</u></string>
    <string name="service_agree"><u>서비스 이용약관</u></string>
    <string name="login_email">이메일</string>
    <string name="login_email_hint">쿠팡 아이디(이메일) 입력</string>
    <string name="login_password">비밀번호</string>
    <string name="login_password_hint">비밀번호 입력</string>
    <string name="login_ok">로그인</string>
    <string name="login_id_find">아이디 찾기</string>
    <string name="findIdMemberInfo">회원정보에 등록된 휴대폰 번호</string>
    <string name="findIdMember">회원정보에 등록된 휴대폰 번호가 생각나지 않으시면 위의 본인 확인을 통해 아이디(이메일)를 찾아주세요.</string>
    <string name="login_password_find">비밀번호 찾기</string>
    <string name="sign_up_info">회원정보를 입력해주세요</string>
    <string name="sign_up_email_hint">아이디(이메일)</string>
    <string name="sign_up_password_hint">비밀번호</string>
    <string name="Sign_up_email_error1">이메일을 올바르게 입력해주세요.</string>
    <string name="Sign_up_email_error2">이메일을 입력하세요.</string>
    <string name="Sign_up_password_error">비밀번호에 사용할 수 없는 문자가 포함되어 있습니다.</string>
    <string name="Sign_up_password_error1">영문/숫자/특수문자 2가지 이상 조합(8~20)</string>
    <string name="Sign_up_password_error2">3개이상 연속되거나 동일한 문자/숫자 제외</string>
    <string name="Sign_up_password_error3">아이디(이메일) 제외</string>
    <string name="Sign_up_password_ok">사용 가능한 비밀번호입니다.</string>
    <string name="Sign_up_name_hint">이름</string>
    <string name="Sign_up_name_error">이름을 정확히 입력하세요</string>
    <string name="Sign_up_phone_hint">휴대폰 번호</string>
    <string name="Sign_up_phone_error1">휴대폰 번호를 올바르게 입력해주세요</string>
    <string name="Sign_up_phone_error2">휴대폰 번호를 정확하게 입력하세요.</string>
    <string name="image_no">no image</string>
    <string name="sign_agree_send">동의하고 가입하기</string>
    <string name="sign_up_copyright">ⓒCoupang Crop. All rights reserved.</string>
    <string name="home_address_need">배달 주소를 입력하세요.</string>
    <string name="sign_up_service_agree_info">쿠팡 서비스약관에 동의해주세요</string>
    <string name="sign_up_agree_all">모두 동의합니다.</string>
    <string name="sign_up_agree_one">[필수] 만 14세 이상입니다</string>
    <string name="sign_up_agree_two">[필수] 쿠팡 이용약관 동의</string>
    <string name="sign_up_agree_three">[필수] 전자금융거래 이용약관 동의</string>
    <string name="sign_up_agree_four">[필수] 개인정보 수집 및 이용 동의</string>
    <string name="sign_up_agree_five">[필수] 개인정보 제공 동의</string>
    <string name="sign_up_agree_error">필수항목에 모두 동의해주세요</string>
    <string name="sign_up_email_duplicate">이미 가입된 이메일 주소입니다. 다른 이메일을 입력하여 주세요.</string>
    <string name="login_notice_need_id">아이디를 입력해주세요</string>
    <string name="login_notice_email_format">아이디는 이메일주소 형식으로 입력해주세요</string>
    <string name="login_notice_password_need">비밀번호를 입력해주세요</string>
    <string name="login_notice_error">오류가 없습니다</string>
    <string name="ok">확인</string>
    <string name="dialog_login_check_text">입력하신 아이디 또는 비밀번호가 일치하지 않습니다</string>
    <string name="sign_up_phone_certification">휴대폰 인증</string>
    <string name="gps_active_info">더 나은 사용 환경을 위해 Google 위치 서비스를 사용하는 기기 위치 기능을 사용 설정하세요. ∨</string>
    <string name="no">아니요</string>
    <string name="home_no_address_title">곧 찾아갈게요!</string>
    <string name="home_no_address_content">쿠팡이츠가 고객님이 계신 곳에 서비스를 준비 중입니다. 배달 가능한 다른 지역에서 둘러보시는건 어때요?</string>
    <string name="myeats_address_manage">배달 주소 관리</string>
    <string name="myeats_discount">할인쿠폰</string>
    <string name="myeats_favorites">즐겨찾기</string>
    <string name="myeats_event">진행중인 이벤트</string>
    <string name="myeats_pay">결제관리</string>
    <string name="myeats_patner">배달파트너 모집</string>
    <string name="myeats_question">자주 묻는 질문</string>
    <string name="myeats_tell">고객 지원</string>
    <string name="myeats_setting">설정</string>
    <string name="myeats_notice">공지사항</string>
    <string name="myeats_agree">약관·개인정보 처리방침</string>
    <string name="delivery_now_agree">배달 현황 알림</string>
    <string name="coupon_info"><![CDATA[쿠폰&혜택 정보 알림]]></string>
    <string name="lanauge">언어</string>
    <string name="logout">로그아웃</string>
    <string name="appVersion">App ver.1.2.19</string>
    <string name="logout_info">정말로 로그아웃 하시겠습니까?</string>
    <string name="logout_text">로그아웃</string>
    <string name="divery_address_setting">배달지 주소 설정</string>
    <string name="address_info">도로명, 건물명 또는 지번으로 검색</string>
    <string name="delivery_address_now_gps">현재 위치로 주소 찾기</string>
    <string name="home">집</string>
    <string name="business">회사</string>
    <string name="searchTip">검색 Tip</string>
    <string name="searchTopRoad">* 도로명</string>
    <string name="searchTopNum">+ 건물번호</string>
    <string name="searchTopRoadEx">  (예: 송파대로 570)</string>
    <string name="searchTipName">* 동/음/면/리</string>
    <string name="searchTipNameNum">+ 번지</string>
    <string name="searchTipNameEx">(예: 신천동 7-30)</string>
    <string name="searchTipBuildingEx">(예: 반포자이아파트)</string>
    <string name="searchTipBuilding">* 건물명, 아파트명</string>
    <string name="address_search_error_text2">지번, 도로명, 건물명을 입력해주세요.</string>
    <string name="address_search_error_text1">검색 결과가 없습니다.</string>
    <string name="detail_address">상세 주소</string>
    <string name="detail_address_name">상세주소 (아파트/동/호)</string>
    <string name="ason">기타</string>
    <string name="company">회사</string>
    <string name="map_gps_check">지도에서 위치 확인하기</string>
    <string name="ignore">무시하기</string>
    <string name="detail_address_input">상세 주소 입력</string>
    <string name="need_detail_address">상세 주소를 입력하세요</string>
    <string name="replace">대체하기</string>
    <string name="delete">취소</string>
    <string name="alias_address">주소 별칭</string>
    <string name="new_delivery">새 배달 주소 추가</string>
    <string name="detail_address_delete">이 주소 삭제하기</string>
    <string name="event_total">이벤트 전체보기</string>
    <string name="discount_super">할인 중인 맛집</string>
    <string name="dot">·</string>
    <string name="new_super">새로 들어왔어요!</string>
    <string name="filter_super_recommend">추천순</string>
    <string name="filter_super_cheetah">치타배달</string>
    <string name="filter_super_min_order">최소주문</string>
    <string name="filter_super_delivery_price">배달비</string>
    <string name="filter_supper_coupon">할인쿠폰</string>
    <string name="dialog_filter_apply">적용하기</string>
    <string name="detail_minOrder">최소주문</string>
    <string name="detail_delivery_price">배달비</string>
    <string name="super_recomm_many_orer">주문많음</string>
    <string name="super_recomm_many_review">리뷰많음</string>
    <string name="look_cart">카트 보기</string>
    <string name="cart">카트</string>
    <string name="cart_modify">수정</string>
    <string name="cart_menu_add">+ 메뉴추가</string>
    <string name="cart_discount">할인쿠폰</string>
    <string name="cart_use_coupon">사용가능 쿠폰</string>
    <string name="cart_delivery_price">배달비</string>
    <string name="cart_menu_price">주문 금액</string>
    <string name="cart_need">요청사항</string>
    <string name="cart_info">쿠팡은 통신판매중개자로서 통신판매의 당사자가 아니며, 판매자가 등록한 상품 정보, 상품의 품질 및 거래에 대해서 일체의 책임을 지지 않습니다. 회원은 주문 내용을 확인하였고, 결제에 동의합니다.</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="coupangInfo1">
        쿠팡(주) | 대표이사 : 박태준\n
        사업자 등록번호 : 120-88-00767 | 통신판매업신고 : 2017-\n
        서울송파-0680 | 서울시 송파구 송파대로 570
    </string>
    <string name="coupangInfo2">쿠팡이츠 고객센터:&#160;</string>
    <string name="coupangInfo3">1670-9827</string>
    <string name="coupangInfo4">| 이메일 문의:</string>
    <string name="coupangInfo5">
        eatsheplp@coupang.com |\n
        쿠팡은 통신판매중개자로서 통신판매의 당사자가 아니며, 판매자가\n등록한 상품 정보, 상품의 품질 및 거래에 대한 일체의 책임을 지지
    </string>
    <string name="coupangInfo6">않습니다.</string>
    <string name="uesAgress">이용약관</string>
    <string name="checked">확인</string>
    <string name="delivery_detail">배달비 안내</string>
    <string name="order_price">주문금액</string>
</resources>