<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/nav_home_selector"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_home_title" />

    <item
        android:id="@+id/menu_main_btm_nav_search"
        android:icon="@drawable/nav_search_selector"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_search_title" />

    <item
        android:id="@+id/menu_main_btm_nav_favorites"
        android:icon="@drawable/ic_nav_favorites"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_favorites_title" />

    <item
        android:id="@+id/menu_main_btm_nav_order"
        android:icon="@drawable/nav_order_selector"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_order_title" />

    <item
        android:id="@+id/menu_main_btm_nav_myeats"
        android:icon="@drawable/nav_myeats_selector"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_myeats_title" />
</menu>