<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_width="match_parent" android:padding="20sp" android:background="@color/white"
    android:layout_height="wrap_content" android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/dialog_login_need_login"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:layout_marginVertical="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/dialog_login_info"
        android:textColor="@color/baseColor"/>
    <TextView
        android:gravity="center"
        android:id="@+id/dialog_login_social"
        android:paddingVertical="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_login_social"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:background="@drawable/box_round_blue_ripple"/>
    <TextView
        android:gravity="center"
        android:id="@+id/dialog_login_basic"
        android:paddingVertical="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_login_basic"
        android:textSize="15sp"
        android:textColor="@color/loginBlue"
        android:textStyle="bold"
        android:background="@drawable/dialog_login_basic"/>

    <LinearLayout
        android:id="@+id/dialog_login_sign_up_parent"
        android:background="@drawable/white_to_gray_ripple"
        android:layout_gravity="center"
        android:layout_marginVertical="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_login_sign_up_info"
            android:textSize="13sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginStart="3dp"
            android:id="@+id/dialog_login_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/loginBlue"
            android:text="@string/dialog_login_sign_up"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_login_agree_head"
            android:textColor="@color/baseColor"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_use_agree"
            android:textColor="@color/baseColor"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest"
            android:textColor="@color/baseColor"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_service_use_agree"
            android:textColor="@color/baseColor"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest"
            android:textColor="@color/baseColor"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay"
            android:textColor="@color/baseColor"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_agree"
            android:textSize="10sp"
            android:textColor="@color/baseColor"
            tools:ignore="SmallSp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest"
            android:textSize="10sp"
            android:textColor="@color/baseColor"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_transaction_agree"
            android:textSize="10sp"
            android:textColor="@color/baseColor"
            tools:ignore="SmallSp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest"
            android:textSize="10sp"
            android:textColor="@color/baseColor"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_privacy_use_agree"
            android:textSize="10sp"
            android:textColor="@color/baseColor"
            tools:ignore="SmallSp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest"
            android:textSize="10sp"
            android:textColor="@color/baseColor"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_privacy_offer_agree"
            android:textSize="10sp"
            android:textColor="@color/baseColor"
            tools:ignore="SmallSp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_login_agree_tail"
            android:textSize="10sp"
            android:textColor="@color/baseColor"
            tools:ignore="SmallSp" />
    </LinearLayout>
</LinearLayout>