<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:padding="20dp">

    <TextView
        android:id="@+id/dialog_gps_active_check_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/gps_active_info"
        android:textColor="@color/baseColor"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_below="@+id/dialog_gps_active_check_text"
        android:layout_alignParentEnd="true"
        android:background="@drawable/white_to_gray_ripple"
        android:padding="15dp"
        android:id="@+id/dialog_gps_active_check_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/ok"
        android:textSize="15sp"
        android:textColor="@color/blue"/>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/dialog_gps_active_check_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_gps_active_check_text"
        android:layout_toStartOf="@+id/dialog_gps_active_check_yes"
        android:background="@drawable/white_to_gray_ripple"
        android:padding="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/no"
        android:textColor="@color/blue"
        android:textSize="15sp" />
</RelativeLayout>