<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_alert_white">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_detail"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/order_price"
            android:gravity="start"
            android:layout_gravity="center"
            android:textColor="@color/lightBlack"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_delivery_price"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/lightBlack"
            android:textSize="13sp"/>

    </LinearLayout>

    <View
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lightGray"/>

    <LinearLayout
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/delivery_detail_minOrder"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="12,000원~"
            android:gravity="start"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/delivery_detail_delivery_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1,000원"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="13sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/loginBlue"/>

    <TextView
        android:id="@+id/delivery_detail_check"
        android:layout_marginVertical="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checked"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/delivery_detail_bottom_circle_ripple"
        android:layout_gravity="center"
        android:textColor="@color/loginBlue"
        android:textSize="15sp"/>
</LinearLayout>